<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lib3"
    android:textAlignment="center">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DisplayContact"
        tools:ignore="MissingConstraints">
    </ScrollView>

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="392dp"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextStreet"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="64dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/aladin"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1E1C1C"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextCity"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:onClick="run"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextEmail"
            android:layout_marginLeft="-5dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/aladin"
            android:text="@string/email"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1E1B1B"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignBottom="@+id/editTextPhone"
            android:fontFamily="@font/aladin"
            android:text="@string/phone"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#151313"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextEmail"
            android:layout_alignLeft="@+id/textView5"
            android:fontFamily="@font/aladin"
            android:text="@string/street"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1E1B1B"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextEmail"
            android:layout_alignRight="@+id/editTextName"
            android:layout_marginTop="9dp"
            android:layout_marginRight="-13dp"
            android:ems="10"
            android:hint="@string/country"
            android:inputType="text"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextCity"
            android:layout_alignBottom="@+id/editTextCity"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="43dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="9dp"
            android:layout_toLeftOf="@+id/editTextEmail"
            android:fontFamily="@font/aladin"
            android:text="@string/country"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#121010"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextStreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPhone"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="text"
            android:minHeight="48dp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextName"
            android:layout_alignLeft="@+id/editTextStreet"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone|text"
            android:minHeight="48dp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>